syntax = "proto3";

package gosesh;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "gosesh/grpc";

service Gosesh {
  rpc GetSession (ID) returns (Session);
  rpc DeleteSession(ID) returns (google.protobuf.Empty);
  rpc DeleteUserSessions(ID) returns (DeleteUserSessionsResponse);
}

message Session {
  bytes id = 1;
  bytes user_id = 2;
  google.protobuf.Timestamp idle_at = 3;
  google.protobuf.Timestamp expire_at = 4;
}

message ID {
  bytes id = 1;
}

message DeleteUserSessionsResponse {
  int32 count = 1;
}
